# pathery-vibecoded

./: .gitignore  .pre-commit-config.yaml  BUG.md  BUG_DQN.md  GEMINI.md  README.md  TODO.md  benchmark.py  bugs.md  config.json  download_puzzles.py  dqn_experiment.md  ga_rl_solver.md  ga_rl_solver_progress.md  pathery_emulator.py  pathery_env_adapter.py  pathery_pathfinding.cpp  pathery_rules.md  pathery_solver.py  pyproject.toml  requirements.txt  run_data_collection.py  setup.py  test_pathery.py  train_dqn.py  utils.py  validate_jsonl.py  visualize_puzzles.py
benchmarks/: solver_performance.md  solver_performance_dqn_genetic_20250704-075152.md  solver_performance_dqn_genetic_20250704-155001.md  solver_performance_dqn_genetic_20250705-094221.md  solver_performance_genetic_20250704-112802.md  solver_performance_genetic_20250705-140509.md  solver_performance_memetic_heuristic_20250705-160609.md  solver_performance_memetic_heuristic_20250705-160652.md  solver_performance_memetic_heuristic_20250705-160752.md  solver_performance_memetic_heuristic_20250705-181427.md
docs/: dqn_model_architecture.md  migration.md  pathery_rules.md
experiments/: memetic_algorithm.md  template.md
mutation_logs/: mutations_3434965.jsonl  mutations_3434990.jsonl  mutations_3435007.jsonl  mutations_3447370.jsonl  mutations_3447371.jsonl  mutations_3447372.jsonl  mutations_3447373.jsonl  mutations_3447374.jsonl  mutations_3447375.jsonl  mutations_3447376.jsonl  (+110 more)
src/pathery_env/cpp_lib/: CMakeLists.txt  Makefile  main.cpp  pathfinder.cpp  pathfinder.hpp  pathfinding.cpp  pathfinding.hpp
(+1086 files in other folders)
